examples/test/testpolicy6679.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6679
  namespace: namespace263
spec:
  podSelector:
    matchLabels:
      key20: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value18
          key0: value25
          key40: value1
      podSelector:
        matchLabels:
          key5: value21
          key10: value20
